--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
                     <div class="skills_content bd-grid">
                         <ul class="skills_data">
                             <li class="skills_name">
-                                <span class="skills_circle"></span>Inglés - Intermedio
+                                <span class="skills_circle"></span>Inglés - Básico
                             </li>
 
-                            <li class="skills_name">
+                            <!-- <li class="skills_name">
                                 <span class="skills_circle"></span>Canva
-                            </li>
+                            </li> -->
 
                             <li class="skills_name">
                                 <span class="skills_circle"></span>Digitadora
@@ -467,7 +467,7 @@
                     <div class="references_container bd-grid">
                         <div class="references_content bd-grid">
                             <h3 class="references_title">Clínica Privada</h3>
-                            <span class="references_subtitle">Licda. Alejandra Díaz, Psicóloga Terapista de Lenguaje</span>
+                            <span class="references_subtitle">Licda. Alejandra Díaz, Psicóloga Clínica y Terapista de Lenguaje</span>
                             <ul class="references_contact">
                                 <li>Contacto: +502 5978 3174</li>
                                 <!-- <li>email: ejemplo</li> -->
