--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 <h3 class="education_title">Diplomado en Administración de Ventas</h3>
                                 <span class="education_studies">CINDE, Universidad Mariano Gálvez de
                                     Guatemala</span>
-                                <span class="education_year">2012 - 2018</span>
+                                <span class="education_year">2001</span>
                             </div>
                         </div>
 
@@ -260,9 +260,9 @@
                                 <span class="skills_circle"></span>Inglés - Básico
                             </li>
 
-                            <!-- <li class="skills_name">
+                            <li class="skills_name">
                                 <span class="skills_circle"></span>Canva
-                            </li> -->
+                            </li>
 
                             <li class="skills_name">
                                 <span class="skills_circle"></span>Digitadora
@@ -363,7 +363,7 @@
                                         <div class="experience_data bd-grid">
                                             <h3 class="experience_title">Ejercicio Profesional Supervisado de Licenciatura en Psicología
                                             </h3>
-                                            <span class="experience_company">Enero 2019 | AMG Guatemala
+                                            <span class="experience_company">Enero 2019 - Noviembre 2019 | AMG Guatemala
                                             </span>
                                             <!-- <p class="experience_description">SUPERVISOR: Lic. Luis Castillo
                                                                         </p>
@@ -389,7 +389,7 @@
                                         <div class="experience_data bd-grid">
                                             <h3 class="experience_title">Representante de Servicio al Cliente
                                             </h3>
-                                            <span class="experience_company">Enero 2015 - Diciembre 2015 | NGS
+                                            <span class="experience_company">Febrero 2015 - Diciembre 2015 | NGS
                                             </span>
                                             <!-- <p class="experience_description">SUPERVISOR: Lic. Luis Castillo
                                                                         </p>
@@ -411,7 +411,7 @@
                 
                                             <div class="experience_data bd-grid">
                                                 <h3 class="experience_title">Secretaria Administrativa</h3>
-                                                <span class="experience_company">Marzo 2010 - Noviembre 2015 |
+                                                <span class="experience_company">Marzo 2010 - Enero 2015 |
                                                     Prodeca, S.A. </span>
                                                 <!-- <p class="experience_description">SUPERVISOR: Lcda. Heidi
                                                                                 Peña</p>
@@ -497,7 +497,7 @@
                 </section>
 
                 <!--========== REFERENCES ==========-->
-                <section class="references section" id="references">
+                <section class="references section" id="references" style="padding-top: 20px;">
                     <h2 class="section-title">Referencias Personales</h2>
 
                     <div class="references_container bd-grid">
