--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                 <section class="home" id="home">
                     <div class="home_container section bd-grid">
                         <div class="home_data bd-grid">
-                            <img src="assets/img/perfil2.png" alt="" class="home_img">
+                            <img src="assets/img/elena-2.jpg" alt="" class="home_img">
 
                             <h1 class="home_title">Elena Beteta Avila</h1>
                             <h3 class="home_profession">Cierre de Pensum, Licenciatura en Psicología</h3>
 
 
                             <div>
-                                <a download="" href="assets/pdf/CV-Elena-Beteta.pdf" class="home_button-movil">Descargar
+                                <a download="" href="assets/pdf/Elena-2025.pdf" class="home_button-movil">Descargar
                                     CV</a>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                             </span>
 
                             <span class="home_information">
-                                <i class="bx bx-envelope home_icon"></i> elena.beteta4@gmail.com
+                                <i class="bx bx-envelope home_icon"></i> helen.ba3369@gmail.com
                             </span>
 
                             <span class="home_information">
